--- a/fbls_extension/sources/manifest.json
+++ b/fbls_extension/sources/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "Facebook Link Sanitizer",
-	"version": "1.1.0",
+	"version": "1.2.0",
 	"description": "Cleans excess goo from links on Facebook!",
 	"icons": {
 		"16": "fbls_16.png",
@@ -14,6 +14,7 @@
 		{
 			"matches": [ "https://*.facebook.com/*" ],
 			"run_at": "document_end",
+			"all_frames": true,
 			"js": [ "fbls_content_script.js" ]
 		}
 	],
